<resources>
    <string name="app_name">All Movies</string>

    <string name="movie_details_title">Movie details</string>
    <string name="movie_details_back">Back</string>
    <string name="movie_details_reviews">%1$d REVIEWS</string>
    <string name="movie_details_storyline">Storyline</string>
    <string name="movie_details_cast">Cast</string>
    <string name="movie_details_share_content_description">Share movie</string>
    <string name="movie_details_share_message">Check out %1$s: %2$s</string>
    <string name="movie_details_share_chooser_title">Share movie</string>
    <string name="movie_details_share_error">Nothing to share yet</string>
    <string name="movie_details_runtime_year_accessibility">Runtime %1$d minutes, release year %2$s</string>
    <string name="movie_details_error_missing_id">Missing movie identifier.</string>
    <string name="movie_details_error_generic">Unable to load movie details.</string>

    <string name="actor_details_title">Actor details</string>
    <string name="actor_details_biography">Biography</string>
    <string name="actor_details_biography_empty">Biography not available.</string>
    <string name="actor_details_birthday">Birthday</string>
    <string name="actor_details_deathday">Deathday</string>
    <string name="actor_details_birthplace">Place of birth</string>
    <string name="actor_details_known_for">Known for</string>
    <string name="actor_details_also_known_as">Also known as</string>
    <string name="actor_details_imdb">IMDb</string>
    <string name="actor_details_homepage">Homepage</string>
    <string name="actor_details_popularity">Popularity: %1$.1f</string>
    <string name="actor_details_error">Unable to load actor details.</string>
    <string name="actor_details_retry">Retry</string>
    <string name="actor_details_photo_content_description">Actor photo</string>
    <string name="actor_details_back_content_description">Navigate back</string>
    <string name="actor_details_error_missing_id">Missing actor identifier.</string>

    <string name="movies_list_screen_title">Now Playing</string>
    <string name="movies_list_reviews">%1$d REVIEWS</string>
    <string name="movies_list_duration">%1$d MIN</string>
    <string name="movies_list_age">%1$d+</string>
    <string name="movies_list_year_unknown">Unknown</string>
    <string name="movies_list_favorite_add">Add to favorites</string>
    <string name="movies_list_favorite_remove">Remove from favorites</string>
    <string name="movies_list_loading_message">Loading movies…</string>
    <string name="movies_list_error_generic">Unable to load movies.</string>

    <string name="menu_update_all">Update all</string>
    <string name="menu_export">Export</string>
    <string name="menu_language">Language</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_content_description">Search movies</string>
    <string name="menu_search_talkback_hint">Double tap to search your library</string>
    <string name="movies_search_query_hint">Search movies</string>
    <string name="movies_search_empty_state">No movies found for “%1$s”.</string>
    <string name="movies_search_error">Unable to show results for “%1$s”.</string>
    <string name="movies_search_error_with_reason">Unable to show results for “%1$s”: %2$s</string>

    <string name="language_dialog_title">Choose language</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>
    <string-array name="language_entries">
        <item>@string/language_english</item>
        <item>@string/language_russian</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string name="library_update_title">Updating library</string>
    <string name="library_update_channel_name">Library maintenance</string>
    <string name="library_update_preparing">Preparing library update…</string>
    <string name="library_update_progress">%1$d%% • %2$s</string>
    <string name="library_update_unknown_title">Unknown movie</string>
    <string name="library_update_success">Library updated</string>
    <string name="library_update_failed_generic">Unable to refresh movies.</string>
    <string name="library_update_complete_toast">Library refresh finished</string>
    <string name="library_update_failed_toast">Library refresh failed: %1$s</string>

    <string name="library_export_in_progress">Preparing export…</string>
    <string name="library_export_failed">Export failed: %1$s</string>
    <string name="library_export_share_title">Share your collection</string>

    <string name="movie_details_favorite_add">Mark as favorite</string>
    <string name="movie_details_favorite_remove">Remove from favorites</string>
    <string name="movie_details_favorite_content_description">Toggle favorite</string>
    <string name="movie_details_error_generic">Unable to load movie details.</string>

    <string name="favorites_list_title">Favorites</string>
    <string name="favorites_list_empty">No favorite movies yet.</string>
    <string name="favorites_list_error_generic">Unable to load favorites.</string>

    <string name="export_csv_yes">Yes</string>
    <string name="export_csv_no">No</string>
    <string name="export_csv_header_number">Number</string>
    <string name="export_csv_header_imdb">IMDB</string>
    <string name="export_csv_header_title">Title</string>
    <string name="export_csv_header_year">Year</string>
    <string name="export_csv_header_runtime">Runtime</string>
    <string name="export_csv_header_rating">Rating</string>
    <string name="export_csv_header_certification">Certification</string>
    <string name="export_csv_header_genres">Genres</string>
    <string name="export_csv_header_loaned">Loaned</string>
    <string name="export_csv_header_loaned_to">Loaned To</string>
    <string name="export_csv_header_loaned_on">Loaned On</string>
    <string name="export_csv_header_loan_due">Loan Due</string>
    <string name="export_csv_header_loan_status">Loan Status</string>
    <string name="export_csv_header_loan_notes">Loan Notes</string>
    <string name="export_csv_header_notes">Notes</string>
    <string name="export_csv_header_trailer">Trailer</string>

    <string-array name="export_csv_headers">
        <item>@string/export_csv_header_number</item>
        <item>@string/export_csv_header_imdb</item>
        <item>@string/export_csv_header_title</item>
        <item>@string/export_csv_header_year</item>
        <item>@string/export_csv_header_runtime</item>
        <item>@string/export_csv_header_rating</item>
        <item>@string/export_csv_header_certification</item>
        <item>@string/export_csv_header_genres</item>
        <item>@string/export_csv_header_loaned</item>
        <item>@string/export_csv_header_loaned_to</item>
        <item>@string/export_csv_header_loaned_on</item>
        <item>@string/export_csv_header_loan_due</item>
        <item>@string/export_csv_header_loan_status</item>
        <item>@string/export_csv_header_loan_notes</item>
        <item>@string/export_csv_header_notes</item>
        <item>@string/export_csv_header_trailer</item>
    </string-array>
</resources>
