<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_update_all"
        android:title="@string/menu_update_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:title="@string/menu_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_language"
        android:title="@string/menu_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:contentDescription="@string/menu_search_content_description"
        app:showAsAction="ifRoom|collapseActionView"
        app:tooltipText="@string/menu_search_talkback_hint" />
</menu>
